src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_PropertyMissingInStyleSetter.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<StackPanel
           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
        <StackPanel.Resources>
                <Style TargetType="{x:Type ListBox}">

                    <Style.Setters>
                    <Setter Value="Extended" />

                    </Style.Setters>
                </Style>
        </StackPanel.Resources>

        <ListBox>
                <ListBox.Items>
                        <ListBoxItem> 1 </ListBoxItem>
                        <ListBoxItem> 2 </ListBoxItem>
                        <ListBoxItem> 3 </ListBoxItem>
                        <ListBoxItem> 4 </ListBoxItem>
                </ListBox.Items>
        </ListBox>
</StackPanel>
</Page>
